--- a/index.html
+++ b/index.html
@@ -72,6 +72,16 @@
           <p class="date">Oct 22, 2019</p>
         </div>
         <p class="letter">Hello Anthony, it's nice to see you again on the dashboard. You <br>currently have 3 new invoices to review and 4 invoices to approve. <br>Here is your team's latest activity. </p>
+        <div class="mobi">
+          <p class="date">Oct 20</p>
+          <p class="invo">Mobile Invoice</p>
+          <p class="dolla">-$78.56</p>
+        </div>
+        <div class="bank">
+          <p class="date">sep 29</p>
+          <p class="invo">Bank Transfer</p>
+          <p class="dola">+$978.79</p>
+        </div>
       </div>
     </div>
 
