addition of html and css styling

--- a/index.html
+++ b/index.html
@@ -83,6 +83,20 @@
           <p class="dola">+$978.79</p>
         </div>
       </div>
+      <div class="chart">
+        <div class="chrt1">
+          <div class="chrta"></div>
+        </div>
+        <div class="chrt1">
+          <div class="chrtb"></div>
+        </div>
+        <div class="chrt1">
+          <div class="chrtc"></div>
+        </div>
+        <div class="chrt1"><div class="chrtd"></div></div>
+        <div class="chrt1"><div class="chrte"></div></div>
+        <div class="chrt1"><div class="chrtf"></div></div>
+      </div>
     </div>
 
   </div>
