adding html and css styling

--- a/index.html
+++ b/index.html
@@ -98,6 +98,27 @@
         <div class="chrt1"><div class="chrtf"></div></div>
       </div>
     </div>
+        <div class="mary">
+          <div class="smith">
+            <div class="round2">
+              <div class="round"><div class="message"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-mail"><path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path><polyline points="22,6 12,13 2,6"></polyline></svg></div></div>
+            </div>
+              <div id="image"><img src="./media/1.jpg" alt="" id="image"></div>
+              
+            <div class="mass">
+              <p class="ma">Mary Smith</p>
+              <p class="se">sent a message</p>
+           </div>
+           <div class="lorem">Lorem ipsum dolor, adipisicing elit. <br> Quisquam ratione, non laborum assumenda...</div>
+          </div>
+          <div class="income">
+            <div class="incom">
+              <h3 class="incoming">INCOMING</h3>
+              <a class="button">View all</a>
+            </div>
+            <h3 class="dol"></h3>
+          </div>
+        </div>
 
   </div>
 </body>
