added some html and css styling

--- a/index.html
+++ b/index.html
@@ -116,10 +116,19 @@
               <h3 class="incoming">INCOMING</h3>
               <a class="button">View all</a>
             </div>
-            <h3 class="dol"></h3>
+            <h3 class="doller"> <span class="dolly" >$</span>2,459.12</h3>
           </div>
         </div>
-
+        <div class="activity">
+          <div class="active"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-activity"><polyline points="22 12 18 12 15 21 9 3 6 12 2 12"></polyline></svg></div>
+          <p class="activ">ACTIVITY</p>
+          <div class="points"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-more-horizontal"><circle cx="12" cy="12" r="1"></circle><circle cx="19" cy="12" r="1"></circle><circle cx="5" cy="12" r="1"></circle></svg></div>
+        </div>
+        <div class="janet">
+          <div class="may"><img src="./media/1.jpg" alt="" class="may"></div>
+          <h3 class="jane"> <span class="jaay">J</span></h3>
+          <div class="jay"></div>
+        </div>
   </div>
 </body>
 </html>
