--- a/index.html
+++ b/index.html
@@ -125,10 +125,24 @@
           <div class="points"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-more-horizontal"><circle cx="12" cy="12" r="1"></circle><circle cx="19" cy="12" r="1"></circle><circle cx="5" cy="12" r="1"></circle></svg></div>
         </div>
         <div class="janet">
-          <div class="may"><img src="./media/1.jpg" alt="" class="may"></div>
-          <h3 class="jane"> <span class="jaay">J</span></h3>
-          <div class="jay"></div>
-        </div>
+          <div class="wrap1">
+            <div class="may"><img src="./media/1.jpg" alt="" class="may"></div>
+            <h3 class="jane"> <span >J</span></h3>
+            <div class="jay">
+              <h3 class="jaay">Mary and Janet</h3>
+              <p class="approve">approved invoice #INV-7894</p>
+            </div>
+              </div>
+              <div class="wrap2">
+                <div class="amt">
+                  <p class="amount">AMOUNT</p>
+                  <h3 class="price"><span class="pricy">$</span>768.49</h3>
+                </div>
+                <div class="alert"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-file-text"><path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path><polyline points="14 2 14 8 20 8"></polyline><line x1="16" y1="13" x2="8" y2="13"></line><line x1="16" y1="17" x2="8" y2="17"></line><polyline points="10 9 9 9 8 9"></polyline></svg></div>
+                <div class="pointr"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-more-horizontal"><circle cx="12" cy="12" r="1"></circle><circle cx="19" cy="12" r="1"></circle><circle cx="5" cy="12" r="1"></circle></svg></div>
+              </div>
+              </div>
+              
   </div>
 </body>
 </html>
