--- a/index.html
+++ b/index.html
@@ -83,20 +83,37 @@
           <p class="dola">+$978.79</p>
         </div>
       </div>
+      <div class="summary">Summary
       <div class="chart">
+        <div class="day">Sun
         <div class="chrt1">
           <div class="chrta"></div>
         </div>
-        <div class="chrt1">
-          <div class="chrtb"></div>
-        </div>
-        <div class="chrt1">
-          <div class="chrtc"></div>
-        </div>
-        <div class="chrt1"><div class="chrtd"></div></div>
-        <div class="chrt1"><div class="chrte"></div></div>
-        <div class="chrt1"><div class="chrtf"></div></div>
       </div>
+        <div class="day">Mon
+        <div class="chrt1">
+          <div class="chrta mon"></div>
+        </div>
+      </div>
+      <div class="day">Tue
+        <div class="chrt1">
+          <div class="chrta blue"></div>
+        </div>
+      </div>
+      <div class="day">Wed
+        <div class="chrt1"><div class="chrta wed"></div></div>
+      </div>
+      <div class="day">Thur
+        <div class="chrt1"><div class="chrta"></div></div>
+      </div>
+      <div class="day">Fri
+        <div class="chrt1"><div class="chrta"></div></div>
+      </div>
+      <div class="day">Sat
+        <div class="chrt1"><div class="chrta blue"></div></div>
+      </div>
+      </div>
+    </div>
     </div>
         <div class="mary">
           <div class="smith">
@@ -141,8 +158,61 @@
                 <div class="alert"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-file-text"><path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path><polyline points="14 2 14 8 20 8"></polyline><line x1="16" y1="13" x2="8" y2="13"></line><line x1="16" y1="17" x2="8" y2="17"></line><polyline points="10 9 9 9 8 9"></polyline></svg></div>
                 <div class="pointr"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-more-horizontal"><circle cx="12" cy="12" r="1"></circle><circle cx="19" cy="12" r="1"></circle><circle cx="5" cy="12" r="1"></circle></svg></div>
               </div>
-              </div>
+            </div>
               
+            <div class="janet">
+              <div class="wrap1">
+                <div class="paul"><span>P</span></div>
+                <h3 class="kris"> <span >K</span></h3>
+                <div class="jay">
+                  <h3 class="jaay">Paul and Kristie</h3>
+                  <p class="approve">approved invoice #INV-7894</p>
+                </div>
+                  </div>
+                  <div class="wrap2">
+                    <div class="amt">
+                      <p class="amount">AMOUNT</p>
+                      <h3 class="price"><span class="pricy">$</span>768.49</h3>
+                    </div>
+                    <div class="alert"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-file-text"><path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path><polyline points="14 2 14 8 20 8"></polyline><line x1="16" y1="13" x2="8" y2="13"></line><line x1="16" y1="17" x2="8" y2="17"></line><polyline points="10 9 9 9 8 9"></polyline></svg></div>
+                    <div class="pointr"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-more-horizontal"><circle cx="12" cy="12" r="1"></circle><circle cx="19" cy="12" r="1"></circle><circle cx="5" cy="12" r="1"></circle></svg></div>
+                  </div>
+
+            <div class="janet">
+              <div class="wrap1">
+                <div class="paul"><span>P</span></div>
+                <h3 class="kris"> <span >K</span></h3>
+                <div class="jay">
+                  <h3 class="jaay">Paul and Kristie</h3>
+                  <p class="approve">approved invoice #INV-7894</p>
+                </div>
+                  </div>
+                  <div class="wrap2">
+                    <div class="amt">
+                      <p class="amount">AMOUNT</p>
+                      <h3 class="price"><span class="pricy">$</span>768.49</h3>
+                    </div>
+                    <div class="alert"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-file-text"><path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path><polyline points="14 2 14 8 20 8"></polyline><line x1="16" y1="13" x2="8" y2="13"></line><line x1="16" y1="17" x2="8" y2="17"></line><polyline points="10 9 9 9 8 9"></polyline></svg></div>
+                    <div class="pointr"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-more-horizontal"><circle cx="12" cy="12" r="1"></circle><circle cx="19" cy="12" r="1"></circle><circle cx="5" cy="12" r="1"></circle></svg></div>
+                  </div>
+
+            <div class="janet">
+              <div class="wrap1">
+                <div class="paul"><span>P</span></div>
+                <h3 class="kris"> <span >K</span></h3>
+                <div class="jay">
+                  <h3 class="jaay">Paul and Kristie</h3>
+                  <p class="approve">approved invoice #INV-7894</p>
+                </div>
+                  </div>
+                  <div class="wrap2">
+                    <div class="amt">
+                      <p class="amount">AMOUNT</p>
+                      <h3 class="price"><span class="pricy">$</span>768.49</h3>
+                    </div>
+                    <div class="alert"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-file-text"><path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path><polyline points="14 2 14 8 20 8"></polyline><line x1="16" y1="13" x2="8" y2="13"></line><line x1="16" y1="17" x2="8" y2="17"></line><polyline points="10 9 9 9 8 9"></polyline></svg></div>
+                    <div class="pointr"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-more-horizontal"><circle cx="12" cy="12" r="1"></circle><circle cx="19" cy="12" r="1"></circle><circle cx="5" cy="12" r="1"></circle></svg></div>
+                  </div>
   </div>
 </body>
 </html>
