--- a/index.html
+++ b/index.html
@@ -146,8 +146,8 @@
             <div class="may"><img src="./media/1.jpg" alt="" class="may"></div>
             <h3 class="jane"> <span >J</span></h3>
             <div class="jay">
-              <h3 class="jaay">Mary and Janet</h3>
-              <p class="approve">approved invoice #INV-7894</p>
+              <h3 class="ma">Mary and Janet</h3>
+              <p class="se">approved invoice #INV-7894</p>
             </div>
               </div>
               <div class="wrap2">
@@ -166,14 +166,14 @@
                 <div class="paul"><span>P</span></div>
                 <h3 class="kris"> <span >K</span></h3>
                 <div class="jay">
-                  <h3 class="jaay">Paul and Kristie</h3>
-                  <p class="approve">approved invoice #INV-7894</p>
+                  <h3 class="ma">Paul and Kristie</h3>
+                  <p class="se">approved invoice #INV-7894</p>
                 </div>
                   </div>
                   <div class="wrap2">
                     <div class="amt">
                       <p class="amount">AMOUNT</p>
-                      <h3 class="price"><span class="pricy">$</span>768.49</h3>
+                      <h3 class="price"><span class="pricy">$</span>259.12</h3>
                     </div>
                     <div class="alert"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-file-text"><path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path><polyline points="14 2 14 8 20 8"></polyline><line x1="16" y1="13" x2="8" y2="13"></line><line x1="16" y1="17" x2="8" y2="17"></line><polyline points="10 9 9 9 8 9"></polyline></svg></div>
                     <div class="pointr"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-more-horizontal"><circle cx="12" cy="12" r="1"></circle><circle cx="19" cy="12" r="1"></circle><circle cx="5" cy="12" r="1"></circle></svg></div>
@@ -184,17 +184,18 @@
 
   <div class="janet">
     <div class="wrap1">
-      <div class="paul"><span>P</span></div>
-      <h3 class="kris"> <span >K</span></h3>
+      <div class="paule"><img src="./media/2.jpg" alt="" class="paule"></div>
+      <h3 class="sheryl"> <span >S</span></h3>
+      <div class="Adam"><img src="./media/6.jpg" alt="" class="adam"></div>
       <div class="jay">
-        <h3 class="jaay">Paul and Kristie</h3>
-        <p class="approve">approved invoice #INV-7894</p>
+        <h3 class="ma">Alex, Sheryl and Adam</h3>
+        <p class="se">approved invoice #INV-7894</p>
       </div>
     </div>
     <div class="wrap2">
       <div class="amt">
         <p class="amount">AMOUNT</p>
-        <h3 class="price"><span class="pricy">$</span>768.49</h3>
+        <h3 class="price"><span class="pricy">$</span>1042.49</h3>
       </div>
       <div class="alert"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-file-text"><path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path><polyline points="14 2 14 8 20 8"></polyline><line x1="16" y1="13" x2="8" y2="13"></line><line x1="16" y1="17" x2="8" y2="17"></line><polyline points="10 9 9 9 8 9"></polyline></svg></div>
       <div class="pointr"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-more-horizontal"><circle cx="12" cy="12" r="1"></circle><circle cx="19" cy="12" r="1"></circle><circle cx="5" cy="12" r="1"></circle></svg></div>
@@ -203,17 +204,19 @@
       
   <div class="janet">
     <div class="wrap1">
-      <div class="paul"><span>P</span></div>
-      <h3 class="kris"> <span >K</span></h3>
+      <div class="tommy"><img src="./media/7.jpg" class="tommy" alt=""></div>
+      <div class="sally"> <img src="./media/4.jpg" class="sally" alt=""></div>
+      <div class="christi"><img src="./media/5.jpg" class="christi" alt=""></div>
+      <h3 class="plus2"><span>+2</span></h3>
       <div class="jay">
-        <h3 class="jaay">Paul and Kristie</h3>
-        <p class="approve">approved invoice #INV-7894</p>
+        <h3 class="ma">Tommy, Sally and Christiana</h3>
+        <p class="se">approved invoice #INV-7894</p>
       </div>
     </div>
     <div class="wrap2">
       <div class="amt">
         <p class="amount">AMOUNT</p>
-        <h3 class="price"><span class="pricy">$</span>768.49</h3>
+        <h3 class="price"><span class="pricy">$</span>3269.99</h3>
       </div>
       <div class="alert"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-file-text"><path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path><polyline points="14 2 14 8 20 8"></polyline><line x1="16" y1="13" x2="8" y2="13"></line><line x1="16" y1="17" x2="8" y2="17"></line><polyline points="10 9 9 9 8 9"></polyline></svg></div>
       <div class="pointr"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-more-horizontal"><circle cx="12" cy="12" r="1"></circle><circle cx="19" cy="12" r="1"></circle><circle cx="5" cy="12" r="1"></circle></svg></div>
